Fix reel arrow initial visibility and center alignment

--- a/agency-jekyll-theme-gh-pages/_includes/css/agency.css
+++ b/agency-jekyll-theme-gh-pages/_includes/css/agency.css
@@ -1447,8 +1447,8 @@ ul.social-buttons li a:active {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: rgba(255, 255, 255, 0.96);
-    font-size: 56px;
+    color: rgba(255, 255, 255, 0.98);
+    font-size: 0;
     font-weight: 400;
     line-height: 1;
     border-radius: 2px;
@@ -1456,24 +1456,14 @@ ul.social-buttons li a:active {
     opacity: 0;
     pointer-events: none;
     transform: none;
-    transition: opacity 0.22s ease, background-color 0.22s ease;
+    transition: opacity 0.22s ease, background-color 0.22s ease, box-shadow 0.22s ease;
     z-index: 2;
 }
 
-.portfolio-modal .modal-reel-edge span {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    display: block;
-    transform: translate(-50%, -50%);
-}
-
-.portfolio-modal .modal-reel-edge-left span {
-    transform: translate(-62%, -50%);
-}
-
-.portfolio-modal .modal-reel-edge-right span {
-    transform: translate(-38%, -50%);
+.portfolio-modal .modal-reel-edge .fa {
+    font-size: 64px;
+    line-height: 1;
+    transform: translateY(-2px);
 }
 
 .portfolio-modal .modal-reel-edge-left {
@@ -1488,12 +1478,13 @@ ul.social-buttons li a:active {
 
 .portfolio-modal .modal-reel-wrap.can-scroll-left .modal-reel-edge-left,
 .portfolio-modal .modal-reel-wrap.can-scroll-right .modal-reel-edge-right {
-    opacity: 0.86;
+    opacity: 0.9;
 }
 
 .portfolio-modal .modal-reel-wrap.edge-hover-left .modal-reel-edge-left,
 .portfolio-modal .modal-reel-wrap.edge-hover-right .modal-reel-edge-right {
-    opacity: 0.98;
+    opacity: 1;
+    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.14);
 }
 
 .portfolio-modal .modal-reel-btn {
@@ -1597,15 +1588,11 @@ ul.social-buttons li a:active {
 
     .portfolio-modal .modal-reel-edge {
         width: 70px;
-        font-size: 46px;
     }
 
-    .portfolio-modal .modal-reel-edge-left span {
-        transform: translate(-60%, -50%);
-    }
-
-    .portfolio-modal .modal-reel-edge-right span {
-        transform: translate(-40%, -50%);
+    .portfolio-modal .modal-reel-edge .fa {
+        font-size: 52px;
+        transform: translateY(-1px);
     }
 
     .portfolio-modal .close-modal {
